fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@ body{
   justify-content: start;
   background-color: #5746ea;
   border-radius: 10px;
-  padding: 20px;
+  padding: 20px 0px 20px 20px;
   padding-top:50px;
   padding-bottom: 0px; 
 }
